# $Id$ vim: ts=4

Griffith ChangeLog
------------------
(c) 2005-2010  Vasco Nunes, Piotr Ożarowski


2010-03-02  Michael Jahn
	* [#525039] crashed while adding films wont reboot linux mint 8
	* [#525869] Plugin FilmAffinity (ES) doesn't import genre

2010-01-17  Michael Jahn
	* Scope movie plugin added

2010-01-05  Michael Jahn
	* delete button added to the advanced filter dialog
	* updated movie plugin Cinematografo (year added to result list entries)

---- 0.11 ----

2010-01-09  Piotr Ożarowski
	* Replace "Aspect ratio" field with "Resolution" (aspect ratio is hidden
	  for now)
	* MyMoviesIt movie plugin updated (thanks to FiloSottile)

2010-01-06  Piotr Ożarowski
	* Some cleanups

2010-01-05  Michael Jahn
	* save and restore sorting column in main list
	* updated movie plugin Stopklatka

2010-01-04  Piotr Ożarowski
	* Add Croatian translation (thanks to Davor I and nafterburner)

2010-01-04  Michael Jahn
	* add MoviePosterDB extension (supports fetching posters)

2010-01-03  Michael Jahn
	* added column header row and some more columns to the basic CSV export
	* added support of adding new collections, volumes, medium and vcodecs while importing data
	  (regards different import plugins)
	* added support for fields screenplay, cameraman and barcode to the CSV import plugin

2010-01-01  Michael Jahn
	* [#501526] Error in export GCStar/DVDProfilerXMLExportV2/3
	* updated movie plugin Allocine

2009-12-28  Michael Jahn
	* updated movie plugin Allocine, Amazon, FilmDb
	* updated import plugin CSV
	  (optional auto-detect dialect settings, fixed pre-selection of encoding)

2009-12-23  Michael Jahn
	* updated movie plugin Cinematografo

2009-12-22  Piotr Ożarowski
	* Fix few spelling mistakes (thanks to Sean Cass)
	* Version changed to 0.11

2009-12-21  Michael Jahn
	* updated movie plugin Kino.de, Cinematografo

2009-12-20  Piotr Ożarowski
	* Add "Extensions toolbar" menu item

2009-12-15  Michael Jahn
	* new import plugin: MovieTrack

2009-12-12  Michael Jahn